--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "private": true,
     "scripts": {
+        "watch": "webpack-dev-server --mode development",
+        "build": "webpack --mode production",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -15,5 +18,22 @@
     "bugs": {
         "url": "https://github.com/leandrop20/reactjs-studying-concepts/issues"
     },
-    "homepage": "https://github.com/leandrop20/reactjs-studying-concepts#readme"
+    "homepage": "https://github.com/leandrop20/reactjs-studying-concepts#readme",
+    "devDependencies": {
+        "@types/react": "^18.2.33",
+        "@types/react-dom": "^18.2.14",
+        "css-loader": "^6.8.1",
+        "sass": "^1.69.5",
+        "sass-loader": "^13.3.2",
+        "style-loader": "^3.3.3",
+        "ts-loader": "^9.5.0",
+        "typescript": "^5.2.2",
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    }
 }
